[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Selection.gd" type="Script" id=1]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 70.0
margin/right = 770.0
margin/bottom = 84.0
text = "Choisissez les dimensions viscérales reliées à la conscience de soi nécessaires en relation avec l'emploi convoité :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Introspection" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 100.0
margin/right = 142.0
margin/bottom = 123.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Introspection"
flat = false
align = 0

[node name="Autonomie" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 130.0
margin/right = 142.0
margin/bottom = 153.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Autonomie"
flat = false
align = 0

[node name="Gestion" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 160.0
margin/right = 142.0
margin/bottom = 183.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Gestion des émotions"
flat = false
align = 0

[node name="Propension" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 100.0
margin/right = 522.0
margin/bottom = 123.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Propension au développement"
flat = false
align = 0

[node name="Ouverture" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 130.0
margin/right = 446.0
margin/bottom = 153.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Ouverture à l'autre"
flat = false
align = 0

[node name="Adaptabilite" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 160.0
margin/right = 412.0
margin/bottom = 183.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Adaptabilité"
flat = false
align = 0

[node name="Capacite" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 570.0
margin/top = 100.0
margin/right = 734.0
margin/bottom = 123.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Capacité d'affirmation"
flat = false
align = 0

[node name="Perseverance" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 570.0
margin/top = 130.0
margin/right = 682.0
margin/bottom = 153.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Persévérance"
flat = false
align = 0

[node name="Sens" type="CheckBox" parent="." groups=[
"COL_TOGGLE",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 570.0
margin/top = 160.0
margin/right = 690.0
margin/bottom = 183.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Sens du devoir"
flat = false
align = 0

[node name="Cocher_tout" type="CheckBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 900.0
margin/top = 100.0
margin/right = 1000.0
margin/bottom = 123.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Cocher tout"
flat = false
align = 0

[node name="Continuer" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 942.0
margin/top = 625.0
margin/right = 1016.0
margin/bottom = 645.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continuer"
flat = false

[node name="Precedent" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 65.0
margin/top = 630.0
margin/right = 142.0
margin/bottom = 650.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Précédent"
flat = false

[connection signal="toggled" from="Introspection" to="." method="_on_Introspection_toggled"]

[connection signal="toggled" from="Autonomie" to="." method="_on_Autonomie_toggled"]

[connection signal="toggled" from="Gestion" to="." method="_on_Gestion_toggled"]

[connection signal="toggled" from="Propension" to="." method="_on_Propension_toggled"]

[connection signal="toggled" from="Ouverture" to="." method="_on_Ouverture_toggled"]

[connection signal="toggled" from="Adaptabilite" to="." method="_on_Adaptabilite_toggled"]

[connection signal="toggled" from="Capacite" to="." method="_on_Capacite_toggled"]

[connection signal="toggled" from="Perseverance" to="." method="_on_Perseverance_toggled"]

[connection signal="toggled" from="Sens" to="." method="_on_Sens_toggled"]

[connection signal="pressed" from="Cocher_tout" to="." method="_on_Cocher_tout_pressed"]

[connection signal="pressed" from="Continuer" to="." method="_on_Continuer_pressed"]

[connection signal="pressed" from="Precedent" to="." method="_on_Precedent_pressed"]


